# mcp-remote-exec

./: .env.example  .mcp.json  CODEBASE_REVIEW.md  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini
.claude/: settings.json
docs/adr/: 001-tool-registration-patterns.md
scripts/: setup_environment.sh
src/mcp_remote_exec/: __init__.py  constants.py  main.py
src/mcp_remote_exec/common/: __init__.py  constants.py  enums.py  validators.py
src/mcp_remote_exec/config/: __init__.py  constants.py  exceptions.py  ssh_config.py
src/mcp_remote_exec/data_access/: __init__.py  constants.py  exceptions.py  path_validator.py  sftp_manager.py  ssh_connection_manager.py
src/mcp_remote_exec/plugins/: __init__.py  base.py  registry.py
src/mcp_remote_exec/presentation/: __init__.py  bootstrap.py  mcp_tools.py  models.py  request_models.py  service_container.py  validators.py
src/mcp_remote_exec/services/: __init__.py  (+5 more)
tests/: README.md  __init__.py  conftest.py
tests/common/: __init__.py  test_enums.py  test_validators.py
tests/config/: __init__.py  test_constants.py  test_exceptions.py  test_ssh_config.py
tests/data_access/: __init__.py  test_exceptions.py  test_path_validator.py  test_sftp_manager.py  test_ssh_connection_manager.py
tests/plugins/: __init__.py  test_base.py  test_registry.py
tests/presentation/: test_bootstrap.py  test_mcp_tools.py  test_models.py  test_request_models.py  test_service_container.py  test_validators.py
tests/services/: test_command_service.py  test_constants.py  test_file_transfer_service.py  test_output_formatter.py
(+32 files in other folders)
