[project]
name = "mcp-remote-exec"
version = "0.1.0"
description = "SSH MCP Remote Exec - MCP server for executing commands on remote servers via AI assistants"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp==2.13.0.2",
    "paramiko==4.0.0",
    "pydantic==2.12.3",
    "python-dotenv==1.2.1",
    "imagekitio==4.2.0",
    "requests==2.32.5",
]

[project.scripts]
mcp-remote-exec = "mcp_remote_exec.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "types-paramiko==4.0.0.20250822",
    "types-requests==2.32.4.20250913",
    "ruff==0.8.0",
    "mypy==1.14.0",
    "taskipy==1.14.1",
    "bandit==1.8.6",
]

[tool.taskipy.tasks]
format = "ruff format src"
lint = "ruff check src"
typecheck = "mypy src"
security = "bandit -r src"
